--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script type="module" src="./components/Tabs/index.js" async></script>
   <script type="module" src="./components/Header/index.js" async></script>
   <script type="module" src="./components/Cards/index.js" async></script>
-  <!-- <script src="./components/Carousel/Carousel.js" async></script> -->
+  <script type="module" src="./components/Carousel/Carousel.js" async></script>
 </head>
 
 <body>
